--- a/pyproject.toml
+++ b/pyproject.toml
@@ -1,10 +1,12 @@
 [project]
-name = "python-3dproto"
+name = "pygfx-proto"
 version = "0.1.0"
-description = "Add your description here"
+description = "3D Prototying in Python & WebGPU"
 readme = "README.md"
 requires-python = ">=3.12"
-dependencies = [
+dependencies = []
+[project.optional-dependencies]
+dev = [
     "glfw>=2.9.0",
     "gltflib>=1.0.13",
     "imageio>=2.37.0",
