--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,3 +14,14 @@ dev = [
     "pygfx>=0.9.0",
     "pygltflib>=1.16.4",
 ]
+
+[dependency-groups]
+dev = [
+    "pygfx-proto",
+]
+
+[tool.uv.sources]
+pygfx-proto = { workspace = true }
+
+[tool.setuptools]
+packages = ["pgfx", "maths", "proto"]
